# fitness-app

./: .gitignore  Cargo.toml  README.md
client/: README.md  package-lock.json  package.json  vite.config.ts
client/src/lib/: api.ts  types.ts
client/src/routes/: +page.svelte  layout.css
migrations/: 20260630041018_init_schema.sql
server/: Cargo.toml  rustfmt.toml
server/src/: main.rs
src/: main.rs
