[package]
name = "fitness-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "macros"] }
sqlx-sqlite = "0.8.6"
tokio = { version= "1.52.3", features = ["full"] }
